reduce to parser & analyzer